<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="48dp"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/etID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etTaxa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etID" />

    <EditText
        android:id="@+id/etFunc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/funcao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaxa" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="231dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFunc" />

    <CheckBox
        android:id="@+id/cbVIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="52dp"
        android:text="@string/vip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/etFunc"
        app:layout_constraintTop_toBottomOf="@+id/etTaxa" />

    <EditText
        android:id="@+id/etTaxa"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/taxa"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etFunc"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />
</androidx.constraintlayout.widget.ConstraintLayout>